--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,6 @@ header p {
 
 nav {
     margin-top: .75rem;
-    background-color: darkslategrey;
     border-radius: 5px;
 }
 
@@ -46,18 +45,15 @@ nav ul {
 
 nav a {
     text-decoration: none;
-	border-radius:5px;
-    color: #EEE;
-    text-align: center;
-    padding: 14px 20px;
+    color: #333;
+    text-align: left;
     font-weight: 500;
     display: block;
     transition: background-color 0.3s ease;
 }
 
 nav a:hover {
-    background-color: #444;
-    color: #ffcc00;
+    color: darkslategrey;
 }
 
 h1, h2, h3 {
@@ -100,9 +96,9 @@ main p {
 .dropdown-content {
     display: none;
     position: absolute;
-	border-bottom-left-radius:5px;
+	border-top-left-radius:5px;
 	border-bottom-right-radius:5px;
-    background-color: darkslategrey; /* Matches the navbar */
+    background-color: #EEE; /* Matches the navbar */
     min-width: 160px;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
     z-index: 1;
@@ -112,7 +108,7 @@ main p {
 }
 
 .dropdown-content a {
-    color: white;
+    color: #333;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -121,6 +117,5 @@ main p {
 }
 
 .dropdown-content a:hover {
-    background-color: #444;
-    color: #ffcc00;
+    color: darkslategrey;
 }
