--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ html {
 
 body {
     background-color: #FFF;
-    margin: 2% auto;
+    margin: 1% auto;
     width: 90%;
     max-width: 59rem;
     font-weight: 400;
@@ -57,7 +57,7 @@ main {
     margin:0;
 }
 
-main p {
+p {
     font-size: .875rem;
 }
 
@@ -74,7 +74,8 @@ main p {
 
 .portfolio li {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    justify-items: center;
 }
 
 .card {
@@ -103,7 +104,7 @@ main p {
 }
 
 .card-front {
-    background-color: rgb(240, 240, 240);
+    background-color: rgb(220, 220, 220);
     color: rgb(46, 134, 171);
 }
 
@@ -233,6 +234,9 @@ nav a.active span:nth-child(even) {
 footer {
     margin-top: 4rem;
     border-top:2px solid #333;
+    display:grid;
+    grid-template-columns: repeat(3, auto);
+    justify-content: space-between;
 }
 
 footer a {
@@ -252,6 +256,14 @@ footer a:hover {
     h1 {
         font-size:4rem;
     }
+
+    .portfolio ul {
+        grid-template-columns: repeat(4, auto);
+    }
+
+    footer {
+        grid-template-columns: repeat(2, auto);
+    }
 }
 
 @media screen and (min-width:515px) and (max-width:692px) {
@@ -263,5 +275,13 @@ footer a:hover {
 
     h1 {
         font-size: 2.975rem;
+    }
+
+    .portfolio ul {
+        grid-template-columns: repeat(3, auto);
+    }
+
+    footer {
+        grid-template-columns: repeat(1, auto);
     }
 }
