--- a/durhamj/css/styles.css
+++ b/durhamj/css/styles.css
@@ -1,43 +1,54 @@
+/* Importing Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
+/* Global Styles */
+html {
+    font-size: 16px;
+    color: #333;
+    font-family: Roboto, sans-serif;
+    scroll-behavior: smooth;
+}
+
 body {
-    font-family: sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
+    background-color: #FFF;
+    margin: 1% auto;
+    width: 90%;
+    max-width: 57rem;
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 1.3;
 }
 
-.container {
-    width: 80%;
-    margin: 20px auto;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+main {
+
+    margin-bottom:3rem;
+
 }
 
-#new-post, #posts {
-    margin-bottom: 20px;
+h1 {
+
+font-family: Oswald, sans-serif;
+font-size:4rem;
+
 }
 
-input[type="text"], textarea {
-    width: calc(100% - 22px);
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
+h2 {
+
+    font-family: Oswald, sans-serif;
+    font-size:2rem;
+
+}
+h3 {
+    font-size:1.5rem;
+    margin-bottom:.5rem;
 }
 
-button {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
+ol {
 
-.post {
-    border: 1px solid #ddd;
-    padding: 10px;
-    margin-bottom: 10px;
-    border-radius: 4px;
+    margin-top:0;
+    padding-left:0;
+    list-style-type: none;
+    font-size:.875rem;
+
 }
