--- a/cheonc/css/styles.css
+++ b/cheonc/css/styles.css
@@ -4,7 +4,7 @@
 
 /* Global Styles */
 html {
-    font-size: 16px;
+    font-size: 18px;
     color: #333;
     font-family: Roboto, sans-serif;
     scroll-behavior: smooth;
@@ -34,21 +34,49 @@ font-size:4rem;
 }
 
 h2 {
-
     font-family: Oswald, sans-serif;
     font-size:2rem;
-
+    color:#fff;
+    text-transform: uppercase;
+    padding:1rem;
 }
 h3 {
     font-size:1.5rem;
     margin-bottom:.5rem;
+    font-weight:400;
 }
 
-ol {
+ol, p {
 
     margin-top:0;
     padding-left:0;
     list-style-type: none;
     font-size:.875rem;
+
+}
+
+figure {
+
+    margin:.5rem 0;
+
+}
+
+figcaption {
+
+    padding:.25rem auto;
+    font-size:.875rem;
+    font-weight:300;
+
+}
+
+.article-header {
+
+    background-color:#46baf0;
+      
+}
+
+.article-content {
+
+    padding:0 1rem;
 
 }
