--- a/beishenkyzyz/css/styles.css
+++ b/beishenkyzyz/css/styles.css
@@ -52,3 +52,71 @@ ol {
     font-size:.875rem;
 
 }
+
+/* === Module 3.1 Blog Post Styles === */
+.module-3-1-blog header {
+    background-color: #004466;
+    color: #ffffff;
+    padding: 1rem;
+    text-align: center;
+  }
+  
+  .module-3-1-blog article {
+    padding: 0 1rem;
+    max-width: 960px;
+    margin: auto;
+  }
+  
+  .module-3-1-blog h1, 
+  .module-3-1-blog h2 {
+    font-family: Oswald, sans-serif;
+    font-weight: 700;
+  }
+  
+  .module-3-1-blog p, 
+  .module-3-1-blog ul, 
+  .module-3-1-blog figcaption {
+    font-size: 0.875rem;
+    font-weight: 300;
+    margin-bottom: 1rem;
+  }
+  
+  .module-3-1-blog figure {
+    margin: 2rem 0;
+    text-align: center;
+  }
+  
+  .module-3-1-blog figure img {
+    width: 100%;
+    max-width: 30rem;
+    height: auto;
+  }
+  
+  .module-3-1-blog footer {
+    background-color: #eeeeee;
+    padding: 1rem;
+    margin-top: 2rem;
+  }
+  
+  .module-3-1-blog footer h2 {
+    font-size: 1.2rem;
+  }
+  
+  .module-3-1-blog footer ul {
+    list-style-type: none;
+    padding: 0;
+  }
+  
+  .module-3-1-blog footer li {
+    margin-bottom: 0.5rem;
+  }
+  
+  .module-3-1-blog a {
+    color: #004466;
+    text-decoration: none;
+  }
+  
+  .module-3-1-blog a:hover {
+    text-decoration: underline;
+  }
+  
