--- a/durhamj/redesign/blog-pages/css/styles.css
+++ b/durhamj/redesign/blog-pages/css/styles.css
@@ -3,6 +3,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 /* Global Styles */
+
+*, *::before, *::after {
+    box-sizing: border-box;
+  }
+
 html {
     font-size: 16px;
     color: #333;
@@ -12,58 +17,82 @@ html {
 
 body {
     background-color: #FFF;
-    margin: 1% auto;
-    width: 93%;
-    max-width: 57rem;
+    margin:0;
     font-weight: 400;
     font-size: 1rem;
     line-height: 1.3;
-}
-
-main {
-
-    padding:2rem;
-
+    
 }
 
 .page-header {
-    display: grid;
-    justify-content: start;
-    padding:2rem;
+  
     background:#333 url(../../images/karl-solano-FnD1bPuFxWw-unsplash.jpg) center/cover no-repeat;
     background-blend-mode: overlay;
     color:#FFF;
-    border-radius:5px;
-}
-
-.page-header > h1 {
-
-    font-family: Oswald, sans-serif;
-    font-size:4rem;
-    margin:1.5rem 0;
-    padding:0;
-
-}
-
-.page-header p {
-    margin-top: -1rem;
-    text-align: right;
-    font-size: 1rem;
-}
-
-.page-header > h1 > span {
-
-    color:#F0D23F;
-
-}
-
-h2 {
-
+    padding:1rem;
+   
+  }
+  
+  .page-header > h1 {
+    
     font-family: Oswald, sans-serif;
     font-size:2rem;
-    text-transform: uppercase;
+    text-align: center;
+    margin:0;
+    padding:1rem;
+    border:solid 2px #FFF;
+    border-top-left-radius:25px;
+    border-top-right-radius:15px;
+    border-bottom-right-radius:15px;
+    width:35%;
+  }
 
-}
+  main {
+
+    margin:1rem;
+    display:grid;
+  
+  }
+
+  main p {
+  
+    font-size:.875rem;
+    font-weight:300;
+    margin-top:0;
+    
+  }
+  
+  main img {
+  
+    width:100%;
+  
+  }
+  
+  .page-footer {
+
+    padding:2rem 1rem;
+    font-size:.875rem;
+    background-color:#333;
+    color:#FFF;
+    text-align:center;
+  
+  }
+  
+  .page-footer a {
+  
+    color:#F1D23F;
+  
+  }
+  
+  h2 {
+  
+    font-family: Oswald, sans-serif;
+    font-size:2rem;
+    font-weight:500;
+    margin-top:0;
+    margin-bottom:0;
+  }
+  
 h3 {
     font-size:1.5rem;
     margin-bottom:.5rem;
@@ -77,7 +106,7 @@ ul, p {
 
 }
 
-ol {
+main ol {
 
     padding-left:1rem;
     font-size:.875rem;
@@ -85,7 +114,7 @@ ol {
 
 }
 
-ol > li {
+main ol > li {
 
     padding-bottom:1rem;
 
@@ -146,33 +175,268 @@ figcaption {
     font-weight:300;
 
 }
+  
+  /* Mobile Menu */
+  
+  .mobile-menu {
+  
+    overflow: hidden;
+    position: relative;
+  
+  }
+  
+  #main-nav {
+  
+    display: none;
+  
+  }
+  
+  #main-nav > a {
+  
+    text-decoration: none;
+    color:#FFF;
+    font-size:2.5vw;
+    font-weight:400;
+    padding:.75rem;
+    display:block; 
+    width:fit-content;
+  
+  }
+  
+  .mobile-menu a.icon {
+    
+    color:white;
+    display: block;
+    font-size:2rem;
+    position: absolute;
+    right: 1rem;
+    top: 1rem; 
+  
+  }
+  
+  #main-nav :nth-child(6) {
+  
+    padding:.75rem;
+    color:#FFF;
+    text-decoration: none;
+    font-weight:600;
+    border:2px solid #F1D23F;
+    border-radius:5px;
+  
+  }
+  
+  #main-nav a:hover {
+  
+    color:#c4c4c4;
+     
+   }
+   
+   #main-nav :nth-child(6):hover {
+     color:#333;
+     background-color:#F1D23F;
+   }
 
-.page-footer {
+   .archives {
 
-    padding-top:2rem;
-    margin-bottom:4rem;
-    border-top:2px solid #333;
+    margin:1rem;
+  
+  }
+  
+  .archives > header {
+  
+    border-bottom: 2px solid #333; 
+  
+  }
+  
+  .archives > nav {
+  
     display:grid;
-    grid-template-columns: 1fr 2fr 1fr;
-    gap:.5rem;
-    align-items: center;
+    gap:1rem;
+    grid-template-columns: repeat(auto-fit, minmax(min(1rem, 100%), 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(min(1rem, 100%), 1fr));
+    margin:1rem;
+  
+  }
+  
+  .archives > nav :nth-child(1) {
+  
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+  
+  }
+  
+  .archives > nav :nth-child(2) {
+  
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    
+  }
+  
+  .archives > nav :nth-child(3) {
+  
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    
+  }
+  
+  .archives > nav :nth-child(4) {
+  
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    
+  }
+  
+  .archives > nav > h3 {
+  
+    margin-bottom:0;
+    margin-top:0;
+   
+  
+  }
+  
+  .archives > nav > ol {
+  
+    list-style-type: none;
+    font-size:.625em;
+    margin-left:0;
+    padding-left:0;
+    margin-top:0;
+  
+  }
 
-}
+  @media screen and (min-width:1024px) {
+    .page-container {
 
-.page-footer :nth-child(1) {
+        display:grid;
+        gap:1rem;
+        grid-template-columns: repeat(auto-fit, minmax(min(1rem, 100%), 1fr));
+        grid-template-rows: repeat(auto-fit, minmax(min(1rem, 100%), 1fr));
+      
+      }
+    
+    .page-header {
+    
+      display:grid;
+      grid:subgrid/subgrid;
+      grid-column:1/13;
+      grid-row: 1 / 4;
+     
+    }
+    
+    .page-header > h1 {
+    
+      grid-column: 2 / 4;
+      grid-row: 2 / 3;
+      font-size:2rem;
+      width:100%;
+    
+    }
+    
+    .mobile-menu a.icon {
+    
+      display:none;
+    
+    }
+    
+    #main-nav {
+    
+      grid-column: 4 / 12;
+      grid-row: 2 / 3;
+      display:flex;
+      justify-content: space-evenly;
+  align-items:center;
+    
+    }
+    
+    #main-nav a {
+    
+      font-size:1.25rem;
+      font-weight:600;
+      font-size:1.25rem;
+    
+    }
 
-    text-align:left;
+  .archives {
+ 
+    margin:0;
+    display:grid;
+    grid:subgrid/subgrid;
+    grid-column: 11 / 13;
+    grid-row: 6 / 12;
+  
+  }
+  
+  .archives > header {
+  
+    grid-column: 1 / 2;
+    border:none;
+  
+  }
+  
+  .archives > h2 {
+  
+    font-weight:400;
+  
+  }
+  
+  .archives > nav {
+  
+    display:block;
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    margin:0;
+  
+  }
+  
+  .archives > nav > h3 {
+  
+  
+    margin-bottom:.5rem;
+  
+  }
+  
+  main {
 
-}
+    margin:2rem 0;
+    grid-column: 2 / 12;
+    grid-row: 4 / 5;
+    
 
-.page-footer :nth-child(2) {
 
-    text-align:center;
+  }
+  
+  .page-footer {
 
-}
-
-.page-footer :nth-child(3) {
-
-    text-align:right;
-
-}
+    display:grid;
+    grid: subgrid / subgrid;
+    grid-column: 2 / 12;
+    grid-row: 10 / 11;
+    font-size: 1rem;
+    color:inherit;
+    background-color:inherit;
+    text-align: left;
+    padding:0;
+  
+  }
+  
+  .page-footer a {
+  
+    color:#0000FF;
+  
+  }
+  
+  .copyright {
+  
+    grid-column: 1 / 9;
+    grid-row: 10 / 11;
+  
+  }
+  
+  .contact {
+  
+    grid-column: 9 / 11 ;
+    grid-row: 10 / 11;
+  
+  }
+  
+  }
