--- a/durhamj/css/styles.css
+++ b/durhamj/css/styles.css
@@ -26,7 +26,7 @@ main {
 
 h1 {
  font-size:4rem;
- font-family: 'Oswald', cursive;
+ font-family: 'Oswald', ssan-serif;
  letter-spacing: .125rem;
 }
 
