--- a/mcialwainc/css/styles.css
+++ b/mcialwainc/css/styles.css
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-    background-color: #eb4646;
+    background-color: #d41f1f;
     margin: 1% auto;
     width: 90%;
     max-width: 57rem;
